--- a/memories.html
+++ b/memories.html
@@ -7,10 +7,10 @@ tags: instagram
 
 
 <div style="font-family: 'Gloria Hallelujah', cursive; text-align: center">
-"I’ll just keep playing back <br>
+I’ll just keep playing back <br>
 These fragments of time <br>
 Everywhere I go <br>
-These moments will shine" <br>
+These moments will shine <br>
 <div style="text-align: right">-- Daft Punk</div>
 </div>
 <br>
